Update to attempt fixing usercard image overflow on mobile view #2

--- a/src/css/ImageCSSModule.module.css
+++ b/src/css/ImageCSSModule.module.css
@@ -6,14 +6,15 @@
 }
 
 .userAvatar {
-  height: 20rem;
+  min-height: 20rem;
+  max-height: 20rem;
   padding: 2.5rem 2.5rem 0 2.5rem;
 }
 
 @media only screen and (max-width: 600px) {
   .userAvatar {
-    height: 20rem;
-    width: 20rem;
+    min-height: 20rem;
+    max-height: 20rem;
     padding: 0;
     margin: 2.5rem;
   }
